--- a/basic.css
+++ b/basic.css
@@ -34,24 +34,25 @@
     margin-bottom: 2rem;
     border-radius: 10px;
 }
-.book-list .image img {
+.book-list img {
     width: 300px;
     height: 420px;
 }
 .content {
     text-align: justify;
-    margin-left: 2rem;
-    margin-right: 2rem;
+    margin-left: 4rem;
+    margin-right: 7rem;
+    margin-top: 2rem;
 }
 .content h3 {
-    font-size: 2.5rem;
+    font-size: 2rem;
     color: #cfae81;
     font-weight: 300;
     margin-top: 2rem;
 }
 .content p {
     margin-top: 1.5rem;
-    font-size: 1.6rem;
+    font-size: 1.3rem;
     color: #ccc;
     font-weight: 300;
     margin-top: 2rem;
@@ -270,6 +271,9 @@ h1 {
     }
     .footer .links {
         display: none;
+    }
+    .content {
+        margin: 1rem;
     }
     .content .btn {
         margin-bottom: 2rem;
