--- a/cords.css
+++ b/cords.css
@@ -6,7 +6,6 @@ body {
 	background-position: center center;
 	background-attachment: fixed;
     font-family: 'Times New Roman', Times, serif;
-    margin-top: 10rem;
     overflow: hidden;
 }
 * {
@@ -92,11 +91,10 @@ nav ul li:hover > ul { display: block; }
 
 .heading {
     text-align: center;
-    color: #fff;
+    color: #cfae81;
     text-transform: uppercase;
     padding-bottom: 3.5rem;
-    font-size: 4rem;
-    margin-top: 10rem;
+    font-size: 3.4rem;
 }
 .heading span {
     color: var(--main-color);
@@ -104,6 +102,13 @@ nav ul li:hover > ul { display: block; }
     text-transform: uppercase;
 }
 
+
+.name {
+    text-align: center;
+    color: #ccc;
+    font-size: 2.7rem;
+    font-weight: 400;
+}
 .footer {
     background: var(--bg);
     text-align: center;
@@ -153,7 +158,7 @@ nav ul li:hover > ul { display: block; }
     flex-direction: row;
     align-items: center;
     overflow: hidden;
-    margin-top: 13rem;
+    margin-top: 12rem;
     position: static;
 }
 .imgContainer {
@@ -600,6 +605,10 @@ nav ul li:hover > ul { display: block; }
     }
 }
 @media (max-width:425px) {
+    .heading {
+        font-size: 2.3rem;
+        margin-top: 13rem;
+    }
     .container {
         display: block;
     }
@@ -607,7 +616,7 @@ nav ul li:hover > ul { display: block; }
         display: block;
         position: absolute;
         left: 0;
-        top: 25%;
+        top: 40%;
     }
     .imgContainer .img {
         height:370px;
@@ -628,10 +637,13 @@ nav ul li:hover > ul { display: block; }
         width: 40%;
     }
     .img p {
-        font-size: 0.95rem;
+        font-size: 0.9rem;
     }
     .container a {
         display: none;
+    }
+    .imgContainer .slide_div {
+        margin-bottom: 3rem;
     }
 
 }
@@ -661,14 +673,14 @@ nav ul li:hover > ul { display: block; }
         width: 35%;
     }
     .img p {
-        font-size: 0.95rem;
+        font-size: 0.85rem;
     }
     .container a {
         display: none;
     }
 
 }
-@media (max-width:375px) {
+@media (max-width:320px) {
     .container {
         display: block;
     }
@@ -701,9 +713,6 @@ nav ul li:hover > ul { display: block; }
     }
     .container a {
         display: none;
-    }
-    .imgContainer .slide_div {
-        margin-bottom: 3rem;
     }
 
 }
