--- a/Capoeira Quotes.css
+++ b/Capoeira Quotes.css
@@ -386,6 +386,10 @@ nav ul li:hover > ul { display: block; }
 }
 
 @media (max-width:425px) {
+    .menu-btn {
+        display: inline-block;
+        margin-right: 1.5rem;
+    }
     .home .content_1 {
         margin-top: 11rem;
         margin-left: 1rem;
