--- a/Movements.css
+++ b/Movements.css
@@ -196,6 +196,18 @@ background-color: rgb(71, 1, 1);
         padding: 1.5rem 2rem;
     }
 }
+@media (max-width:1240px) {
+    .menu-btn {
+        display: inline-block;
+        margin-right: 8rem;
+    }
+    .menu-btn ul li {
+        font-size: 3rem;
+    }
+     header nav ul li {
+        display: none;
+    }
+}
 @media (max-width:1176px) {
     .home {
         background-position: left;
