--- a/basic.css
+++ b/basic.css
@@ -243,6 +243,18 @@ h1 {
         padding: 1.5rem 2rem;
     }
 }
+@media (max-width:1240px) {
+    .menu-btn {
+        display: inline-block;
+        margin-right: 8rem;
+    }
+    .menu-btn ul li {
+        font-size: 3rem;
+    }
+     header nav ul li {
+        display: none;
+    }
+}
 @media (max-width:1176px) {
     .home {
         background-position: left;
