--- a/cords.css
+++ b/cords.css
@@ -583,9 +583,13 @@ nav ul li:hover > ul { display: block; }
 @media (max-width:1240px) {
     .menu-btn {
         display: inline-block;
+        margin-right: 8rem;
     }
     .menu-btn ul li {
         font-size: 3rem;
+    }
+     header nav ul li {
+        display: none;
     }
 }
 @media (max-width:1176px) {
