--- a/music.css
+++ b/music.css
@@ -266,6 +266,18 @@ nav ul li:hover > ul { display: block; }
         margin-right: -3rem;
     }
 }
+@media (max-width:1240px) {
+    .menu-btn {
+        display: inline-block;
+        margin-right: 8rem;
+    }
+    .menu-btn ul li {
+        font-size: 3rem;
+    }
+     header nav ul li {
+        display: none;
+    }
+}
 @media (max-width:1176px) {
     .home {
         background-size: cover;
