--- a/Ginga.css
+++ b/Ginga.css
@@ -408,6 +408,10 @@ nav ul li:hover > ul { display: block; }
 }
 
 @media (max-width:425px) {
+	    .menu-btn {
+        display: inline-block;
+        margin-right: 1.5rem;
+    }
     .basic {
         margin-top: 14rem;
     }
