--- a/about us try.css
+++ b/about us try.css
@@ -325,6 +325,10 @@ nav ul li:hover > ul { display: block; }
     }
 }
 @media (max-width:425px) {
+	    .menu-btn {
+        display: inline-block;
+        margin-right: 1.5rem;
+    }
     .content h1 {
         font-size: 60px;
         margin-top: -2.5rem;
