--- a/cords.css
+++ b/cords.css
@@ -618,6 +618,10 @@ nav ul li:hover > ul { display: block; }
     }
 }
 @media (max-width:425px) {
+	    .menu-btn {
+        display: inline-block;
+        margin-right: 1.5rem;
+    }
     .heading {
         font-size: 2.3rem;
         margin-top: 13rem;
