--- a/find out.css
+++ b/find out.css
@@ -245,6 +245,10 @@ nav ul li:hover > ul { display: block; }
     }
 }
 @media (max-width:425px) {
+	    .menu-btn {
+        display: inline-block;
+        margin-right: 1.5rem;
+    }
     .home .find h3{
         font-size: 4rem;
     }
