--- a/maculele.css
+++ b/maculele.css
@@ -263,6 +263,10 @@ nav ul li:hover > ul { display: block; }
 }
 
 @media (max-width:425px) {
+	    .menu-btn {
+        display: inline-block;
+        margin-right: 1.5rem;
+    }
     .heading {
         margin-top: 13rem;
     }
