--- a/mestres.css
+++ b/mestres.css
@@ -312,6 +312,10 @@ nav ul li:hover > ul { display: block; }
     
 }
 @media (max-width:425px) {
+	    .menu-btn {
+        display: inline-block;
+        margin-right: 1.5rem;
+    }
     .container {
         margin-top: 13rem;
     }
