--- a/cords.css
+++ b/cords.css
@@ -210,7 +210,7 @@ nav ul li:hover > ul { display: block; }
     color: #cfae81;
     font-size: 1.5rem;
     margin-left: 0.5rem;
-}https://github.com/nightmare2077/senzala_odyssey-test/blob/main/cords.css
+}
 .button {
     position: absolute;
     height:370px;
@@ -622,7 +622,7 @@ nav ul li:hover > ul { display: block; }
 }
 @media (max-width:425px) {
     .heading {
-        font-size: 1.7rem;
+        font-size: 2rem;
         margin-top: 13rem;
     }
     .container {
